--- a/local/data/ui/views/zeek_dcerpc.xml
+++ b/local/data/ui/views/zeek_dcerpc.xml
@@ -1,7 +1,7 @@
 <form theme="dark">
   <label>Zeek DCE/RPC</label>
   <search id="basesearch">
-    <query>`zeek` | fields Time src_ip src_port dest_ip dest_port endpoint operation </query>
+    <query>`network` | fields Time src_ip src_port dest_ip dest_port endpoint operation </query>
     <earliest>$time1.earliest$</earliest>
     <latest>$time1.latest$</latest>
     <sampleRatio>1</sampleRatio>
