--- a/local/data/ui/views/zeek_files.xml
+++ b/local/data/ui/views/zeek_files.xml
@@ -14,7 +14,7 @@
       <title>Top 20 Mime Types by File Count</title>
       <table>
         <search>
-          <query>index=zeek_files | stats count by mime_type | sort - count |rename count as Count, mime_type as "Mime Type"| head 20</query>
+          <query>`OPORD` tag=files | stats count by mime_type | sort - count |rename count as Count, mime_type as "Mime Type"| head 20</query>
           <earliest>$time1.earliest$</earliest>
           <latest>$time1.latest$</latest>
           <sampleRatio>1</sampleRatio>
